# scud2query

./: Makefile  README.md  pyproject.toml
data/correctness_labeled_scud/scud2query/: scud2query.Example.jsonl
data/scud/scud2query/: scud2query.Example.jsonl
